--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h3 {
 
 .cup.cup-small.full {
   background-color: var(--fill-color);
+  color: #fff;
 }
 
 .cups {
@@ -65,4 +66,39 @@ h3 {
   width: 280px;
   align-items: center;
   justify-content: center;
+}
+
+.remained {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  flex: 1;
+  transition: 0.3s ease;
+}
+
+.remained span {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.remained small {
+  font-size: 12px;
+}
+
+.percentage {
+  background-color: var(--fill-color);
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  height: 0;
+  transition: 0.3s ease;
+}
+
+.text {
+  text-align: center;
+  margin: 0 0 5px;
 }
