Add fill functionality in js

--- a/style.css
+++ b/style.css
@@ -102,3 +102,19 @@ h3 {
   text-align: center;
   margin: 0 0 5px;
 }
+
+.btn {
+  color: var(--border-color);
+  font-weight: bold;
+  background-color: #fff;
+  border: 5px solid var(--border-color);
+  border-radius: 15%;
+  width: 80px;
+  height: 30px;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.btn:focus {
+  transform: scale(0.98);
+}
